--- a/src/site/_includes/type.scss
+++ b/src/site/_includes/type.scss
@@ -11,7 +11,7 @@ h4 {
 
 h1 {
   font-size: 2.5em;
-  margin: 2em 0 0.5em;
+  margin: 0.5em 0 0.5em;
   @include bp(wide) {
     max-width: 900px;
   }
